--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,9 +4,17 @@
       android:versionCode="1"
       android:versionName="1.0">
       
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+    <application android:icon="@drawable/solvedmaze" android:label="@string/app_name" android:debuggable="true">
    
         <activity android:name=".ui.MazeActivity"
+                  android:label="@string/app_name">
+        </activity>
+        
+        <activity android:name=".ui.MainMenuActivity"
+                  android:label="@string/app_name">
+        </activity>
+        
+        <activity android:name=".ui.MainSplashActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
