--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="lib/andengine.jar" sourcepath="/AndEngine/src"/>
 	<classpathentry kind="lib" path="lib/andenginephysicsbox2dextension.jar"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="lib" path="lib/androidsqlhelperannotations.jar"/>
+	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
